# skillLauncher-windows

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  INSTALL_GUIDE.md  INSTALL_GUIDE_SIMPLE.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  USER_GUIDE.md  add-nsis-path.ps1  build-nsis.ps1  build-release.bat  build.bat  dev.bat  diagnose.bat  index.html  install-skill.bat  package-lock.json  package.json  skill-launcher.ps1  temp.msi  temp.wixobj  temp.wixpdb  test-launch.bat  vite.config.ts  vite.config.ts.timestamp-1770087214303-30bbea3296422.mjs  启动技能启动器.bat
.claude/: settings.local.json
.claude/skills/skill-launcher/: launch.bat  launch.ps1
.serena/: project.yml
docs/: closure-trap-and-data-overwrite.md  plan.md  任务计划plan.md
scripts/: install-skill-launcher.ps1
skills/: skill-launcher.md
skills/skill-launcher/: launch-universal.bat  launch.bat  launch.ps1  skill.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  NSISinstaller.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  skills.rs
src-tauri/wix/: main.wxs
src/components/: SettingsDialog.tsx  SkillList.tsx
src/hooks/: useInputParser.ts  useKeyboardNavigation.ts  useSettings.ts  useSkillUsage.ts  useSkills.ts
src/services/: skillScanner.ts
src/types/: settings.ts  skill.ts  skillUsage.ts
src/utils/: skillIconUtils.ts
