[package]
name = "skill-launcher"
version = "1.0.0"
description = "A Windows launcher for Claude Code Skills"
authors = ["you"]
edition = "2021"

[lib]
name = "skill_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
